# rs-lisp

./: .gitignore  Cargo.toml  README.md
arch/: README.md
arch/docs/: package_manager.md  systems_overview.md
spec/: control_flow.ll  functions.ll  ideas.s  importing.ll  types.ll
src/: context.rs  eval.rs  eval_recur.rs  hash.rs  lhash.rs  lib.rs  main.rs  ptr.rs
src/gc/: embed_gc.rs  gc.rs  gc_object.rs  mod.rs
src/lang/: _struct.rs  callable.rs  context.rs  function.rs  interface.rs  keyword.rs  list.rs  mod.rs  multi_function.rs  namespace.rs  nil.rs  number.rs  object.rs  scope.rs  special_form.rs  symbol.rs  typ.rs  value.rs  vector.rs
src/lang/hash_map/: hash_map.rs  mod.rs
src/lang/macros/: _if.rs  _let.rs  def.rs  mod.rs  quote.rs  throw.rs
src/lang/reader/: comment_reader.rs  hash_map_reader.rs  identifier_reader.rs  list_reader.rs  mod.rs  number_reader.rs  quote_reader.rs  quoted_reader.rs  reader.rs  symbol_reader.rs  utils.rs  vector_reader.rs  whitespace_reader.rs
src/lang/special_forms/: _do.rs  _fn.rs  _if.rs  _let.rs  _macro.rs  _type.rs  def.rs  mod.rs  quote.rs  throw.rs
src/lang/typs/: builtins.rs  constructors.rs  extern_function.rs  function.rs  init.rs  list.rs  mod.rs  namespace.rs  nil.rs  primitives.rs  reader.rs  scope.rs  typs.rs
src/lang/typs/reader/: list_reader.rs  mod.rs  reader.rs  symbol_reader.rs  whitespace_reader.rs
src/reader/: mod.rs  reader.rs  token.rs  utils.rs
src/reader/readers/: comment_reader.rs  identifier_reader.rs  mod.rs  number_reader.rs  single_char_reader.rs  string_reader.rs  whitespace_reader.rs
src/utils/: clone_box.rs  mod.rs  ptr.rs
tests/: fac.ll  fac.py  fac.rb  fac.s  simple.s  test.ll  test.rs  test.s
